Update cursor of disabled dropdown buttons

--- a/src/styles/components/_dropdown.css
+++ b/src/styles/components/_dropdown.css
@@ -17,7 +17,7 @@
     }
 
     &:disabled {
-      @apply bg-gray-200 text-gray-500;
+      @apply bg-gray-200 text-gray-500 cursor-not-allowed;
     }
   }
 
