--- a/src/styles/base/_base.css
+++ b/src/styles/base/_base.css
@@ -1,5 +1,5 @@
 body {
-  @apply bg-gray-200 text-gray-900 p-10;
+  @apply bg-gray-300 text-gray-900 p-10;
   width: max-content;
 }
 
@@ -10,7 +10,7 @@ header {
 }
 
 h1 {
-  @apply text-orange-500 font-bold text-4xl;
+  @apply text-yellow-500 font-bold text-4xl;
 }
 
 header p {
