--- a/src/styles/components/_cell-head.css
+++ b/src/styles/components/_cell-head.css
@@ -3,6 +3,11 @@
 
   &__color-icon {
     @apply rounded-full w-3 h-3 mr-2 flex-shrink-0;
+
+    &.multicolour {
+      @apply bg-gradient-to-b from-blue-500 via-purple-500 via-pink-500 via-red-500 via-yellow-500 via-yellow-300 via-green-500 to-gray-500;
+      background: conic-gradient(var(--tw-gradient-stops));
+    }
   }
 
   &__text {
@@ -17,7 +22,7 @@
     }
 
     &--changed {
-      @apply text-orange-700 bg-orange-200;
+      @apply text-yellow-700 bg-yellow-200;
     }
   }
 }
