--- a/src/styles/components/_dropdown.css
+++ b/src/styles/components/_dropdown.css
@@ -23,6 +23,19 @@
 
   &__placeholder {
     @apply flex-grow inline-flex items-center;
+
+    &:empty {
+      @apply hidden;
+    }
+
+    &:not(:empty) + & {
+      @apply ml-2 pl-2;
+
+      &::before {
+        content: '';
+        @apply border-l border-gray-200 absolute inset-y-1.5 -ml-2;
+      }
+    }
   }
 
   &__chevron {
@@ -43,6 +56,22 @@
 
   &__menu {
     @apply shadow-xs rounded-md bg-white;
+
+    &--multi-column {
+      @apply flex;
+    }
+  }
+
+  &__column {
+    @apply flex-grow;
+
+    &:not(:first-child) {
+      @apply border-l border-gray-100;
+    }
+
+    &-heading {
+      @apply text-gray-700 px-4 py-2 whitespace-nowrap text-sm font-medium;
+    }
   }
 
   &__group {
@@ -68,8 +97,17 @@
       @apply bg-gray-200 !important;
     }
 
+    &--hidden {
+      @apply hidden;
+    }
+
     &-color-icon {
-      @apply rounded-full w-3 h-3 mr-2
+      @apply rounded-full w-3 h-3 mr-2;
+
+      &.multicolour {
+        @apply bg-gradient-to-b from-blue-500 via-purple-500 via-pink-500 via-red-500 via-yellow-500 via-yellow-300 via-green-500 to-gray-500;
+        background: conic-gradient(var(--tw-gradient-stops));
+      }
     }
 
     &-name {
@@ -97,7 +135,7 @@
     }
 
     &--changed {
-      @apply text-orange-700 bg-orange-200;
+      @apply text-yellow-700 bg-yellow-200;
     }
 
     &--removed {
