Improve focus-ring styles

--- a/src/styles/base/_form.css
+++ b/src/styles/base/_form.css
@@ -2,6 +2,6 @@ input {
   @apply text-gray-700 bg-white border border-gray-400 rounded-md px-4 py-2 font-normal text-sm leading-5 transition ease-in-out duration-150;
 
   &:focus {
-    @apply outline-none border-blue-300; /* TODO: `shadow-outline-blue` isn't working. Using Tailwind class instead. */
+    @apply shadow-outline outline-none border-blue-400;
   }
 }
