--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -564,7 +564,7 @@ h1 {
   font-size: 2.25rem;
   line-height: 2.5rem;
   --tw-text-opacity: 1;
-  color: rgba(245, 158, 11, var(--tw-text-opacity));
+  color: rgba(217, 119, 6, var(--tw-text-opacity));
 }
 
 header p {
@@ -612,9 +612,11 @@ input {
 
 input:focus {
     --tw-border-opacity: 1;
-    border-color: rgba(147, 197, 253, var(--tw-border-opacity));
+    border-color: rgba(96, 165, 250, var(--tw-border-opacity));
     outline: 2px solid transparent;
-    outline-offset: 2px; /* TODO: `shadow-outline-blue` isn't working. Using Tailwind class instead. */
+    outline-offset: 2px;
+    --tw-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
 table {
@@ -779,16 +781,18 @@ tbody tr:last-child > :last-child {
 
 .button-group__button:focus {
       --tw-border-opacity: 1;
-      border-color: rgba(147, 197, 253, var(--tw-border-opacity));
+      border-color: rgba(96, 165, 250, var(--tw-border-opacity));
       outline: 2px solid transparent;
-      outline-offset: 2px; /* TODO: `shadow-outline-blue` isn't working. Using Tailwind class instead. */
+      outline-offset: 2px;
+      --tw-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+      box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     }
 
 .button-group__button:active {
       --tw-bg-opacity: 1;
       background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
       --tw-text-opacity: 1;
-      color: rgba(31, 41, 55, var(--tw-text-opacity)); /* TODO: `bg-gray-50` isn't working. Using Tailwind class instead. */
+      color: rgba(31, 41, 55, var(--tw-text-opacity));
     }
 
 .button-group__button:first-child {
@@ -856,7 +860,7 @@ tbody tr:last-child > :last-child {
 
 .dropdown__button:focus {
       --tw-border-opacity: 1;
-      border-color: rgba(147, 197, 253, var(--tw-border-opacity));
+      border-color: rgba(96, 165, 250, var(--tw-border-opacity));
       outline: 2px solid transparent;
       outline-offset: 2px;
       --tw-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
@@ -1256,35 +1260,127 @@ tr:hover .cell--dark {
       color: rgba(107, 114, 128, var(--tw-text-opacity));
     }
 
-.cell--highlighted {
-    --tw-bg-opacity: 1 !important;
-    background-color: rgba(252, 165, 165, var(--tw-bg-opacity)) !important;
-  }
-
-.cell--highlighted.cell--dark {
-      --tw-bg-opacity: 1 !important;
-      background-color: rgba(127, 29, 29, var(--tw-bg-opacity)) !important;
+.cell--highlighted .color__preview {
+      --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+      --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+      box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+      --tw-ring-offset-color: #f3f4f6;
+      --tw-ring-offset-width: 3px;
+      --tw-ring-opacity: 1;
+      --tw-ring-color: rgba(99, 102, 241, var(--tw-ring-opacity));
     }
+
+.cell--highlighted.cell--dark .color__preview {
+        --tw-ring-offset-color: #1f2937;
+      }
 
 .cell--added {
     --tw-bg-opacity: 1;
     background-color: rgba(209, 250, 229, var(--tw-bg-opacity));
   }
 
+.cell--added .color__preview {
+      --tw-ring-offset-color: #d1fae5;
+    }
+
+tbody tr:hover .cell--added {
+      --tw-bg-opacity: 1;
+      background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
+    }
+
+tbody tr:hover .cell--added .color__preview {
+        --tw-ring-offset-color: #a7f3d0;
+      }
+
 .cell--added.cell--dark {
       --tw-bg-opacity: 1;
       background-color: rgba(6, 78, 59, var(--tw-bg-opacity));
     }
+
+.cell--added.cell--dark .color__preview {
+        --tw-ring-offset-color: #064e3b;
+      }
+
+tbody tr:hover .cell--added.cell--dark {
+        --tw-bg-opacity: 1;
+        background-color: rgba(6, 95, 70, var(--tw-bg-opacity));
+      }
+
+tbody tr:hover .cell--added.cell--dark .color__preview {
+          --tw-ring-offset-color: #065f46;
+        }
 
 .cell--changed {
     --tw-bg-opacity: 1;
     background-color: rgba(254, 243, 199, var(--tw-bg-opacity));
   }
 
+.cell--changed .color__preview {
+      --tw-ring-offset-color: #fef3c7;
+    }
+
+tbody tr:hover .cell--changed {
+      --tw-bg-opacity: 1;
+      background-color: rgba(253, 230, 138, var(--tw-bg-opacity));
+    }
+
+tbody tr:hover .cell--changed .color__preview {
+        --tw-ring-offset-color: #fde68a;
+      }
+
 .cell--changed.cell--dark {
       --tw-bg-opacity: 1;
       background-color: rgba(120, 53, 15, var(--tw-bg-opacity));
     }
+
+.cell--changed.cell--dark .color__preview {
+        --tw-ring-offset-color: #78350f;
+      }
+
+tbody tr:hover .cell--changed.cell--dark {
+        --tw-bg-opacity: 1;
+        background-color: rgba(146, 64, 14, var(--tw-bg-opacity));
+      }
+
+tbody tr:hover .cell--changed.cell--dark .color__preview {
+          --tw-ring-offset-color: #92400e;
+        }
+
+.cell--removed {
+    --tw-bg-opacity: 1;
+    background-color: rgba(254, 226, 226, var(--tw-bg-opacity));
+  }
+
+.cell--removed .color__preview {
+      --tw-ring-offset-color: #fee2e2;
+    }
+
+tbody tr:hover .cell--removed {
+      --tw-bg-opacity: 1;
+      background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
+    }
+
+tbody tr:hover .cell--removed .color__preview {
+        --tw-ring-offset-color: #fecaca;
+      }
+
+.cell--removed.cell--dark {
+      --tw-bg-opacity: 1;
+      background-color: rgba(127, 29, 29, var(--tw-bg-opacity));
+    }
+
+.cell--removed.cell--dark .color__preview {
+        --tw-ring-offset-color: #7f1d1d;
+      }
+
+tbody tr:hover .cell--removed.cell--dark {
+        --tw-bg-opacity: 1;
+        background-color: rgba(153, 27, 27, var(--tw-bg-opacity));
+      }
+
+tbody tr:hover .cell--removed.cell--dark .color__preview {
+          --tw-ring-offset-color: #991b1b;
+        }
 
 .cell-head {
   display: flex;
@@ -1339,6 +1435,13 @@ tr:hover .cell--dark {
       color: rgba(180, 83, 9, var(--tw-text-opacity));
     }
 
+.cell-head__badge--removed {
+      --tw-bg-opacity: 1;
+      background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
+      --tw-text-opacity: 1;
+      color: rgba(185, 28, 28, var(--tw-text-opacity));
+    }
+
 .color {
   display: flex;
   align-items: center;
@@ -1389,6 +1492,94 @@ tr:hover .cell--dark {
         --tw-text-opacity: 1;
         color: rgba(107, 114, 128, var(--tw-text-opacity));
       }
+
+.tooltip {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+  border-radius: 0.375rem;
+  border-width: 1px;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  opacity: 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  pointer-events: none;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  z-index: 10;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform-origin: bottom;
+  --tw-scale-x: .95;
+  --tw-scale-y: .95;
+  --tw-translate-x: -50%;
+  --tw-translate-y: 0.25rem;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+  transition-duration: 75ms;
+}
+
+.tooltip::after {
+    content: '';
+    --tw-bg-opacity: 1;
+    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+    --tw-border-opacity: 1;
+    border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    height: 0.625rem;
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    width: 0.625rem;
+    --tw-translate-x: 0;
+    --tw-translate-y: 0;
+    --tw-rotate: 0;
+    --tw-skew-x: 0;
+    --tw-skew-y: 0;
+    --tw-scale-x: 1;
+    --tw-scale-y: 1;
+    transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    --tw-rotate: 45deg;
+    --tw-translate-x: -50%;
+    --tw-translate-y: -50%;
+  }
+
+.tooltip--active {
+    opacity: 1;
+    --tw-scale-x: 1;
+    --tw-scale-y: 1;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    transition-duration: 100ms;
+  }
+
+.tooltip__heading {
+    font-weight: 500;
+    font-size: .625rem;
+    line-height: 1rem;
+    margin-bottom: 0.5rem;
+    --tw-text-opacity: 1;
+    color: rgba(107, 114, 128, var(--tw-text-opacity));
+    text-transform: uppercase;
+    letter-spacing: 0.025em;
+  }
 
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -12354,6 +12545,10 @@ tr:hover .cell--dark {
   line-height: 1;
 }
 
+.text-xxs {
+  font-size: .625rem;
+}
+
 .leading-3 {
   line-height: .75rem;
 }
@@ -21567,6 +21762,10 @@ tr:hover .cell--dark {
   --tw-ring-offset-width: 2px;
 }
 
+.ring-offset-3 {
+  --tw-ring-offset-width: 3px;
+}
+
 .ring-offset-4 {
   --tw-ring-offset-width: 4px;
 }
@@ -21587,6 +21786,10 @@ tr:hover .cell--dark {
   --tw-ring-offset-width: 2px;
 }
 
+.focus-within\:ring-offset-3:focus-within {
+  --tw-ring-offset-width: 3px;
+}
+
 .focus-within\:ring-offset-4:focus-within {
   --tw-ring-offset-width: 4px;
 }
@@ -21605,6 +21808,10 @@ tr:hover .cell--dark {
 
 .focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
+}
+
+.focus\:ring-offset-3:focus {
+  --tw-ring-offset-width: 3px;
 }
 
 .focus\:ring-offset-4:focus {
@@ -41623,6 +41830,10 @@ tr:hover .cell--dark {
     line-height: 1;
   }
 
+  .sm\:text-xxs {
+    font-size: .625rem;
+  }
+
   .sm\:leading-3 {
     line-height: .75rem;
   }
@@ -50823,6 +51034,10 @@ tr:hover .cell--dark {
     --tw-ring-offset-width: 2px;
   }
 
+  .sm\:ring-offset-3 {
+    --tw-ring-offset-width: 3px;
+  }
+
   .sm\:ring-offset-4 {
     --tw-ring-offset-width: 4px;
   }
@@ -50843,6 +51058,10 @@ tr:hover .cell--dark {
     --tw-ring-offset-width: 2px;
   }
 
+  .sm\:focus-within\:ring-offset-3:focus-within {
+    --tw-ring-offset-width: 3px;
+  }
+
   .sm\:focus-within\:ring-offset-4:focus-within {
     --tw-ring-offset-width: 4px;
   }
@@ -50861,6 +51080,10 @@ tr:hover .cell--dark {
 
   .sm\:focus\:ring-offset-2:focus {
     --tw-ring-offset-width: 2px;
+  }
+
+  .sm\:focus\:ring-offset-3:focus {
+    --tw-ring-offset-width: 3px;
   }
 
   .sm\:focus\:ring-offset-4:focus {
@@ -70757,6 +70980,10 @@ tr:hover .cell--dark {
     line-height: 1;
   }
 
+  .md\:text-xxs {
+    font-size: .625rem;
+  }
+
   .md\:leading-3 {
     line-height: .75rem;
   }
@@ -79957,6 +80184,10 @@ tr:hover .cell--dark {
     --tw-ring-offset-width: 2px;
   }
 
+  .md\:ring-offset-3 {
+    --tw-ring-offset-width: 3px;
+  }
+
   .md\:ring-offset-4 {
     --tw-ring-offset-width: 4px;
   }
@@ -79977,6 +80208,10 @@ tr:hover .cell--dark {
     --tw-ring-offset-width: 2px;
   }
 
+  .md\:focus-within\:ring-offset-3:focus-within {
+    --tw-ring-offset-width: 3px;
+  }
+
   .md\:focus-within\:ring-offset-4:focus-within {
     --tw-ring-offset-width: 4px;
   }
@@ -79995,6 +80230,10 @@ tr:hover .cell--dark {
 
   .md\:focus\:ring-offset-2:focus {
     --tw-ring-offset-width: 2px;
+  }
+
+  .md\:focus\:ring-offset-3:focus {
+    --tw-ring-offset-width: 3px;
   }
 
   .md\:focus\:ring-offset-4:focus {
@@ -99891,6 +100130,10 @@ tr:hover .cell--dark {
     line-height: 1;
   }
 
+  .lg\:text-xxs {
+    font-size: .625rem;
+  }
+
   .lg\:leading-3 {
     line-height: .75rem;
   }
@@ -109091,6 +109334,10 @@ tr:hover .cell--dark {
     --tw-ring-offset-width: 2px;
   }
 
+  .lg\:ring-offset-3 {
+    --tw-ring-offset-width: 3px;
+  }
+
   .lg\:ring-offset-4 {
     --tw-ring-offset-width: 4px;
   }
@@ -109111,6 +109358,10 @@ tr:hover .cell--dark {
     --tw-ring-offset-width: 2px;
   }
 
+  .lg\:focus-within\:ring-offset-3:focus-within {
+    --tw-ring-offset-width: 3px;
+  }
+
   .lg\:focus-within\:ring-offset-4:focus-within {
     --tw-ring-offset-width: 4px;
   }
@@ -109129,6 +109380,10 @@ tr:hover .cell--dark {
 
   .lg\:focus\:ring-offset-2:focus {
     --tw-ring-offset-width: 2px;
+  }
+
+  .lg\:focus\:ring-offset-3:focus {
+    --tw-ring-offset-width: 3px;
   }
 
   .lg\:focus\:ring-offset-4:focus {
@@ -129025,6 +129280,10 @@ tr:hover .cell--dark {
     line-height: 1;
   }
 
+  .xl\:text-xxs {
+    font-size: .625rem;
+  }
+
   .xl\:leading-3 {
     line-height: .75rem;
   }
@@ -138225,6 +138484,10 @@ tr:hover .cell--dark {
     --tw-ring-offset-width: 2px;
   }
 
+  .xl\:ring-offset-3 {
+    --tw-ring-offset-width: 3px;
+  }
+
   .xl\:ring-offset-4 {
     --tw-ring-offset-width: 4px;
   }
@@ -138245,6 +138508,10 @@ tr:hover .cell--dark {
     --tw-ring-offset-width: 2px;
   }
 
+  .xl\:focus-within\:ring-offset-3:focus-within {
+    --tw-ring-offset-width: 3px;
+  }
+
   .xl\:focus-within\:ring-offset-4:focus-within {
     --tw-ring-offset-width: 4px;
   }
@@ -138263,6 +138530,10 @@ tr:hover .cell--dark {
 
   .xl\:focus\:ring-offset-2:focus {
     --tw-ring-offset-width: 2px;
+  }
+
+  .xl\:focus\:ring-offset-3:focus {
+    --tw-ring-offset-width: 3px;
   }
 
   .xl\:focus\:ring-offset-4:focus {
@@ -158159,6 +158430,10 @@ tr:hover .cell--dark {
     line-height: 1;
   }
 
+  .\32xl\:text-xxs {
+    font-size: .625rem;
+  }
+
   .\32xl\:leading-3 {
     line-height: .75rem;
   }
@@ -167359,6 +167634,10 @@ tr:hover .cell--dark {
     --tw-ring-offset-width: 2px;
   }
 
+  .\32xl\:ring-offset-3 {
+    --tw-ring-offset-width: 3px;
+  }
+
   .\32xl\:ring-offset-4 {
     --tw-ring-offset-width: 4px;
   }
@@ -167379,6 +167658,10 @@ tr:hover .cell--dark {
     --tw-ring-offset-width: 2px;
   }
 
+  .\32xl\:focus-within\:ring-offset-3:focus-within {
+    --tw-ring-offset-width: 3px;
+  }
+
   .\32xl\:focus-within\:ring-offset-4:focus-within {
     --tw-ring-offset-width: 4px;
   }
@@ -167397,6 +167680,10 @@ tr:hover .cell--dark {
 
   .\32xl\:focus\:ring-offset-2:focus {
     --tw-ring-offset-width: 2px;
+  }
+
+  .\32xl\:focus\:ring-offset-3:focus {
+    --tw-ring-offset-width: 3px;
   }
 
   .\32xl\:focus\:ring-offset-4:focus {
