Add filter to toggle only rows with changed data
- Update button-group to work as a toggle when having only a single button;
- Reorganize filters to be more context-aware and also grouped by control type;

--- a/src/styles/components/_table.css
+++ b/src/styles/components/_table.css
@@ -92,6 +92,17 @@ table {
   }
 }
 
+
+/* Filtered Rows
+ * ----------------------------
+ */
+
+table {
+  &[data-changes-only] tbody tr:not([data-change-type]) {
+    @apply hidden;
+  }
+}
+
 /* Cells
  * ----------------------------
  */
