Update Versions Dropdown to align Sketch versions between macOS versions

--- a/src/styles/components/_dropdown.css
+++ b/src/styles/components/_dropdown.css
@@ -80,6 +80,10 @@
 
   &__separator {
     @apply border-t border-gray-100;
+
+    &--placeholder {
+      @apply invisible;
+    }
   }
 
   &__item {
@@ -99,6 +103,10 @@
 
     &--hidden {
       @apply hidden;
+    }
+
+    &--placeholder {
+      @apply invisible;
     }
 
     &-color-icon {
