--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -29,6 +29,10 @@ html(lang="en")
           span.dropdown__badge.dropdown__badge--removed
           span.dropdown__badge.dropdown__badge--unchanged =
 
+    template#version-dropdown-item-placeholder
+      .dropdown__item.dropdown__item--placeholder
+        span.dropdown__item-name
+
     template#head-th
       th.cell.cell--head
         .cell-head
